[gd_scene load_steps=23 format=2]

[ext_resource path="res://enemy/walking/skeleton-walking_7.png" type="Texture" id=1]
[ext_resource path="res://enemy/walking/skeleton-walking_0.png" type="Texture" id=2]
[ext_resource path="res://enemy/walking/skeleton-walking_4.png" type="Texture" id=3]
[ext_resource path="res://scripts/enemy_script.gd" type="Script" id=4]
[ext_resource path="res://enemy/dead/skeleton-defeated_17.png" type="Texture" id=5]
[ext_resource path="res://enemy/dead/skeleton-defeated_16.png" type="Texture" id=6]
[ext_resource path="res://enemy/dead/skeleton-defeated_11.png" type="Texture" id=7]
[ext_resource path="res://enemy/dead/skeleton-defeated_15.png" type="Texture" id=8]
[ext_resource path="res://enemy/dead/skeleton-defeated_10.png" type="Texture" id=9]
[ext_resource path="res://enemy/attack/skeleton-attack_8.png" type="Texture" id=10]
[ext_resource path="res://enemy/attack/skeleton-attack_3.png" type="Texture" id=11]
[ext_resource path="res://enemy/attack/skeleton-attack_7.png" type="Texture" id=12]
[ext_resource path="res://enemy/attack/skeleton-attack_11.png" type="Texture" id=13]
[ext_resource path="res://enemy/attack/skeleton-attack_17.png" type="Texture" id=14]
[ext_resource path="res://enemy/attack/skeleton-attack_15.png" type="Texture" id=15]
[ext_resource path="res://enemy/attack/skeleton-attack_5.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.25, 31.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 222.5, 25.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 49.5, 25.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.5, 25.5 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="ASS" type="AnimatedSprite" parent="."]
position = Vector2( 2201, 801 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "walk"
speed_scale = 2.0
playing = true

[node name="RC" type="RayCast2D" parent="ASS"]
position = Vector2( -265, 44.9995 )
scale = Vector2( 7.69795, -1.81602 )
enabled = true
cast_to = Vector2( 0, -175.481 )
collision_mask = 23

[node name="smth" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2204, 811 )
shape = SubResource( 2 )

[node name="to_jump" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_jump"]
position = Vector2( 2203, 764 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="attack" type="Area2D" parent="."]
position = Vector2( 2205, 809 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( -177.5, 9.5 )
shape = SubResource( 5 )

[node name="gethurt" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="gethurt"]
position = Vector2( 2159.5, 819.5 )
shape = SubResource( 6 )

[node name="gethurt1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="gethurt1"]
position = Vector2( 2242.5, 819.5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="to_jump" to="." method="_on_to_jump_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="gethurt" to="." method="_on_gethurt_body_entered"]
[connection signal="body_entered" from="gethurt1" to="." method="_on_gethurt1_body_entered"]
